--- a/package.json
+++ b/package.json
@@ -3,13 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
+    "google-maps-react": "^1.0.19",
+    "immutable": "^3.8.1",
     "lodash.throttle": "^4.1.1",
+    "mapbox-gl": "^0.37.0",
+    "r-dom": "^2.3.2",
     "react": "^15.5.4",
+    "react-async-script": "^0.9.1",
     "react-dom": "^15.5.4",
+    "react-map-gl": "^2.0.2",
+    "react-mapbox-gl": "^1.9.3",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
+    "react-thunk": "^1.0.0",
     "react-transition-group": "^1.1.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
